// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu renders 1`] = `
<Dropdown
  disabled={false}
  overlay={
    <Menu>
      <MenuItem>
        <li>
          test
        </li>
      </MenuItem>
      <MenuItem>
        <li>
          test2
        </li>
      </MenuItem>
    </Menu>
  }
>
  title
</Dropdown>
`;

exports[`DropdownMenu renders with all props set 1`] = `
<Dropdown
  disabled={true}
  overlay={
    <Menu
      onClick={[MockFunction]}
    >
      <MenuItem>
        <li>
          test
        </li>
      </MenuItem>
      <MenuItem>
        <li>
          test2
        </li>
      </MenuItem>
    </Menu>
  }
>
  title
</Dropdown>
`;
